fix: modify height when no trade

--- a/awesome_project/awesome_app/static/css/chat.css
+++ b/awesome_project/awesome_app/static/css/chat.css
@@ -199,7 +199,7 @@ hr{
 .chat-container{
     padding: 14px 20px 0px 20px;
 
-    max-height: 280px;
+    height: 280px;
     overflow-y: auto; 
 }
 
