feat: add alert func on fix location

--- a/awesome_project/awesome_app/templates/awesome_app/fix_location.html
+++ b/awesome_project/awesome_app/templates/awesome_app/fix_location.html
@@ -29,7 +29,9 @@
   <div class="content-box">
     <div class="container column center" id="content">
       <div id="map" style="width: 500px; height: 500px; margin-top: 44px"></div>
+      <h5 id="region-certified">{{ region }}</h5>
       <h5 id="region-info"></h5>
+      <h5 id="region-warn"></h5>
       <button id="region-button" class="primary-button" onClick="fixLocation();">거래 희망 장소 설정하기</button>
     </div>
   </div>
