feat: add path finding on write page

--- a/awesome_project/awesome_app/templates/awesome_app/fix_location.html
+++ b/awesome_project/awesome_app/templates/awesome_app/fix_location.html
@@ -37,8 +37,7 @@
   </div>
 
   <!--카카오 api key-->
-  <script type="text/javascript"
-    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=06b71a5db40aca812f7ae8bff82d58b9&libraries=services"></script>
+  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=06b71a5db40aca812f7ae8bff82d58b9&libraries=services"></script>
   <script type="text/javascript" src="{% static 'js/fix_location.js' %}"></script>
 </body>
 
